added grid layout and font style and cards to html

--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 .jumbotron {
     text-align: center;
-    background-color: rgb(51, 51, 51);
     color: white;
     font-family: 'Merriweather', serif;
 
+}
+
+body {
+    font-family: 'Merriweather', serif;
+}
+
+#search {
+    color: white;
 }
